src/app/globals.css
@import 'tailwindcss';

@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --background: #fff;
  --foreground: #000000;
  --primary: #007acc;
  --secondary: #005f99;
  --accent: #394e9b;
  --job: #263365;
  --gray-800: #1e293b;
  --gray-700: #374151;
  --gray-600: #4b5563;
  --gray-300: #d1d5db;
  --gray-200: #e5e7eb;
  --gray-100: #f3f4f6;
}

.dark {
  --background: #121212;
  --foreground: #ffffff;
  --primary: #66ccff;
  --secondary: #3399cc;
  --accent: #66ccff;
  --job: #6ea1ff;
  --gray-800: #1e293b;
  --gray-700: #374151;
  --gray-600: #4b5563;
  --gray-300: #d1d5db;
  --gray-200: #e5e7eb;
  --gray-100: #f3f4f6;
}

body {
  margin: 0;
  font-family:
    system-ui,
    -apple-system,
    BlinkMacSystemFont,
    'Segoe UI',
    Roboto,
    'Helvetica Neue',
    Arial,
    sans-serif;
  background-color: var(--background);
  color: var(--foreground);
  transition:
    background-color 0.3s,
    color 0.3s;
}

a {
  color: var(--primary);
  text-decoration: none;
}

a:hover {
  color: var(--secondary);
}

button {
  font-family: inherit;
  cursor: pointer;
}

@media print {
  .no-print {
    display: none;
  }

  .only-print {
    display: block;
  }
}

